# markdown-include

./: .git-blame-ignore-revs  .gitignore  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: black.yaml  publish.yaml  tests.yaml
examples/mkdocs/: mkdocs.yml
examples/mkdocs/docs/: index.md
examples/mkdocs/docs/template/: template.md  template_2.md
markdown_include/: include.py  include.py.bak
tests/: test_embedded.py  test_include.py  test_lines.py
tests/resources/: simple.md  table_inner.md  template_inside.md  with_img_link.md  with_link.md
unittests/: test_include.py  test_include_header_indent.py
unittests/resources/: header.md  simple_2.md  template_inside.md
